adds animation artwork to portfolio

--- a/01_work/01_workDetails/precisely.html
+++ b/01_work/01_workDetails/precisely.html
@@ -19,14 +19,14 @@
         <a href="../../index.html"><img draggable="false" src="../../00_assets/svgs/meMe.svg" id="me_index" width="100px"></a>
         <div class="web">            
             <a href="../../index.html">Work</a>
-            <a href="../../02_cases/index.html">Artwork</a>
+            <a href="../../02_artwork/index.html">Artwork</a>
             <a href="../../00_assets/me/Judy Zhang UX Resume.pdf" target="_blank">Resumé</a>
         </div>
         <div class="mob">
             <div id="mobIcon"><img src="../../00_assets/svgs/hmg.svg" width="60vh" height="60vh"></div>
             <ul class="mobNav">
                 <a href="../../index.html"><li>Work</li></a>
-                <a href="../../02_cases/index.html"><li >Artwork</li></a>
+                <a href="../../02_artwork/index.html"><li >Artwork</li></a>
                 <a href="../00_assets/me/Judy Zhang UX Resume.pdf" target="_blank"><li>Resumé</li></a>
             </ul>
         </div>
@@ -50,9 +50,9 @@
     <div class="heroImg" id="preciseHero">
         <h1 id="csTitle">Precisely</h1>
         <small class="subhead">Role</small>
-        <p id="role">UX Designer</p>      
+        <p id="role">UX Design Intern</p>      
         <small class="subhead">Tool</small>
-        <p id="tool">Figma, Miro, Powerpoint</p>  
+        <p id="tool">Notion, Figma, Miro, Powerpoint</p>  
         <small class="subhead">Duration</small>  
         <p id="duration">June 2025 to August 2025</p>        
     </div>
@@ -184,7 +184,7 @@
     </div>
 
     <div class="stage">
-        <div class="label">Takeaways</div>
+        <div class="label">Reflection</div>
         <div class="desc">
             <p>
                 The three months I had the privilege of learning at Precisely and collaborating with their talented UX team was the 
@@ -218,8 +218,6 @@
         <a href="" class="check" id="checked">Complementary</a>
         <p>&bull;</p>
         <a href="./tha.html" class="check">True Healthcare Assistance</a>
-        <!-- <p>&bull;</p>
-        <a href="./stellar.html" class="check">Stellar 2024</a> -->
     </div>
 
     <footer>
