--- a/02_artwork/00_artDetails/index.html
+++ b/02_artwork/00_artDetails/index.html
@@ -19,14 +19,14 @@
         <img draggable="false" src="../../00_assets/svgs/meMe.svg" id="me_index" width="100px">
         <div class="web">          
             <a href="../../index.html">Work</a>
-            <a href="../index.html">Playground</a>
+            <a href="../index.html">Artwork</a>
             <a href="../../00_assets/me/Judy Zhang Resume.pdf" target="_blank">Resumé</a>
         </div>
         <div class="mob">
             <div id="mobIcon"><img src="../../00_assets/svgs/hmg.svg" width="60vh" height="60vh"></div>
             <ul class="mobNav">
                 <a href="../../index.html"><li>Work</li></a>
-                <a href="../index.html"><li>Playground</li></a>
+                <a href="../index.html"><li>Artwork</li></a>
                 <a href="../../00_assets/me/Judy Zhang Resume.pdf" target="_blank"><li>Resumé</li></a>
             </ul>
         </div>
