--- a/02_artwork/index.html
+++ b/02_artwork/index.html
@@ -42,6 +42,18 @@
 
         <div id="projecTop"></div>
 
+            <div class="projectRight project">
+                <section class="projectView">
+                    <img draggable="false" class="projectImg" src="../00_assets/projects/design/art/other/2d.png" alt="2D Character Animation">
+                </section>
+                <section class="projectDetails">
+                    <section class="subDetail">Illustrated, Edited, and Animated &#10002; 2025</section>
+                    <section class="projectTitle">2D Animation</section>
+                    <section class="projectBrief">These are two 2D animations I animated for my 2D Animation course.</section>
+                </section>
+            </div>
+        <div class="skip"></div>
+
             <div class="projectLeft project">
                 <section class="projectView">
                     <img draggable="false" class="projectImg" src="../00_assets/projects/code/seemore.png" alt="Digital Design, Usability, and 3D Graphics Portfolio">
