--- a/01_work/01_workDetails/compl.html
+++ b/01_work/01_workDetails/compl.html
@@ -19,14 +19,14 @@
         <a href="../../index.html"><img draggable="false" src="../../00_assets/svgs/meMe.svg" id="me_index" width="100px"></a>
         <div class="web">            
             <a href="../../index.html">Work</a>
-            <a href="../../02_cases/index.html">Artwork</a>
+            <a href="../../02_artwork/index.html">Artwork</a>
             <a href="../../00_assets/me/Judy Zhang UX Resume.pdf" target="_blank">Resumé</a>
         </div>
         <div class="mob">
             <div id="mobIcon"><img src="../../00_assets/svgs/hmg.svg" width="60vh" height="60vh"></div>
             <ul class="mobNav">
                 <a href="../../index.html"><li>Work</li></a>
-                <a href="../../02_cases/index.html"><li >Artwork</li></a>
+                <a href="../../02_artwork/index.html"><li >Artwork</li></a>
                 <a href="../00_assets/me/Judy Zhang UX Resume.pdf" target="_blank"><li>Resumé</li></a>
             </ul>
         </div>
@@ -319,11 +319,11 @@
     </div>
 
     <div class="more">
-        <a href="" class="check" id="checked">Complementary 2024</a>
+        <a href="" class="check" id="checked">Complementary </a>
         <p>&bull;</p>
-        <a href="./tha.html" class="check">True Healthcare Assistance 2024</a>
+        <a href="./tha.html" class="check">True Healthcare Assistance </a>
         <p>&bull;</p>
-        <a href="./stellar.html" class="check">Stellar 2024</a>
+        <a href="./precisely.html" class="check">Precisely </a>
     </div>
 
     <footer>
