--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
         <a href=""><img draggable="false" src="./00_assets/svgs/meMe.svg" id="me_index" width="100px"></a>
         <div class="web">            
             <a href="#" id="active">Work</a>
-            <a href="../02_cases/index.html">Artwork</a>
+            <a href="./02_artwork/index.html">Artwork</a>
             <a href="../00_assets/me/Judy Zhang UX Resume.pdf" target="_blank">Resumé</a>
         </div>
         <div class="mob">
             <div id="mobIcon"><img src="../00_assets/svgs/hmg.svg" width="60vh" height="60vh"></div>
             <ul class="mobNav">
                 <a href="#" id="mobActive"><li>Work</li></a>
-                <a href="../02_cases/index.html"><li >Artwork</li></a>
+                <a href="./02_artwork/index.html"><li >Artwork</li></a>
                 <a href="../00_assets/me/Judy Zhang UX Resume.pdf" target="_blank"><li>Resumé</li></a>
             </ul>
         </div>
