updates year on footer

--- a/01_work/01_workDetails/precisely.html
+++ b/01_work/01_workDetails/precisely.html
@@ -19,14 +19,14 @@
         <a href="../../index.html"><img draggable="false" src="../../00_assets/svgs/meMe.svg" id="me_index" width="100px"></a>
         <div class="web">            
             <a href="../../index.html">Work</a>
-            <a href="../../02_artwork/index.html">Artwork</a>
+            <a href="../../02_cases/index.html">Artwork</a>
             <a href="../../00_assets/me/Judy Zhang UX Resume.pdf" target="_blank">Resumé</a>
         </div>
         <div class="mob">
             <div id="mobIcon"><img src="../../00_assets/svgs/hmg.svg" width="60vh" height="60vh"></div>
             <ul class="mobNav">
                 <a href="../../index.html"><li>Work</li></a>
-                <a href="../../02_artwork/index.html"><li >Artwork</li></a>
+                <a href="../../02_cases/index.html"><li >Artwork</li></a>
                 <a href="../00_assets/me/Judy Zhang UX Resume.pdf" target="_blank"><li>Resumé</li></a>
             </ul>
         </div>
@@ -229,7 +229,7 @@
             <a href="https://github.com/JudyZhang05" target="_blank"><img src="../../00_assets/svgs/gh.svg" id="up3" alt="follow me at github"></a>
         </div>
         <br/>
-        <small id="cr">&copy; 2024. All rights reserved to Judy Zhang</small>
+        <small id="cr">&copy; 2026. All rights reserved to Judy Zhang</small>
     </footer>
     <script src="./script.js"></script>
 </body>
