minor text edit

--- a/01_work/01_workDetails/precisely.html
+++ b/01_work/01_workDetails/precisely.html
@@ -170,7 +170,7 @@
 
             <p>I also delved into Figma and delivered over 40 pixel-perfect revisions and laid a strong foundation 
                 for other modals that were deemed out of scope and offered solutions to specific edge cases that future modals could
-                 potentially encounter.  By the time of my departure, some of the revisions I had handed off to the engineers had 
+                 potentially encounter.  By the time of my graduation, some of the revisions I had handed off to the engineers had 
                  already been implemented, and many others were in progress.</p>
             <div class="mshow">
                 <img class="show subshow" draggable="false" src="../../00_assets/projects/cases/evidence/precisely/d1.png" alt="edited modal message copy">
